jeopardygame.css
body {
    background-color: black;
    color: lightgray;
    width: 100%;
    height: 100%;
}

#finalGrid {

    height: 100%;
}

.category-container {
    display: flex;
    flex-flow: column;
    height: 100%;
    justify-content: space-around;
    align-items: stretch;
}

#game-table {
    table-layout: fixed;
    width: 100%;
    text-align: center;
    border-collapse: separate;
    border-spacing: 8px 8px;
}

th.qa_title {
    justify-content: center;
    align-items: center;
    padding: 10px;
    margin: 6px;
    background-color: blue;
    border-radius: 15px;
    text-align: center;
    height: 64px;


}

td.qa_item {
    color: white;
    padding: 10px;
    background-color: blue;
    border-radius: 15px;
}

.qa_item:hover {
    filter: brightness(160%);
}

.default {
    color: red;
}

#overlay-box {
    position: fixed;
    display: none;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,1.0);
    z-index: 2;
    cursor: pointer;
}

.game-info-field {
    font-size: 16px;
}

#aq-information {
    background-color: black;
}

.overlay-item {
    font-size: 60px;
    margin: 20px;
    padding: 30px;
    border: solid lightblue 4px;
    border-radius: 30px;
}

